Bug 142226 - [EMF] SmallTextOut support
Summary: [EMF] SmallTextOut support
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.2
Keywords:
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2021-05-12 00:57 UTC by Valek Filippov
Modified: 2026-02-11 17:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
EMF sample with SmallTextOut (572 bytes, image/x-emf)
2021-05-12 00:57 UTC, Valek Filippov
Details
Screenshot of the sample EMF file opened in MS Paint (870 bytes, image/png)
2021-05-12 00:58 UTC, Valek Filippov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Valek Filippov 2021-05-12 00:57:17 UTC
Description:
LO doesn't implement SmallTextOut MR.

Steps to Reproduce:
Open attached EMF sample

Actual Results:
LO shows empty drawing

Expected Results:
Should show a line of text.


Reproducible: Always


User Profile Reset: No



Additional Info:
This MR is also sampled in the EMF by David Mathog attached to 55058.

Opening this one with a sample that has minimum number of records to simplify testing and tracking.
Comment 1 Valek Filippov 2021-05-12 00:57:49 UTC
Created attachment 171893 [details]
EMF sample with SmallTextOut
Comment 2 Valek Filippov 2021-05-12 00:58:49 UTC
Created attachment 171894 [details]
Screenshot of the sample EMF file opened in MS Paint
Comment 3 Roman Kuznetsov 2021-05-22 18:03:45 UTC
confirm in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 128f67e0efa02294205a1abe1be874557ecdcecd
CPU threads: 4; OS: Linux 5.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: ru-RU
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-05-19_06:21:05
Calc: threaded
Comment 4 QA Administrators 2023-05-23 03:14:08 UTC Comment hidden (obsolete)
Comment 5 Kira Tubo 2023-09-23 21:20:24 UTC
Reproduced in 3.3 and daily master build. Updating earliest version to Inherited from OOo.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 486ae5db6987411d5e394de94b2b077099d03856
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 QA Administrators 2025-09-23 03:11:32 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2026-02-08 18:21:46 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aad62f783bd1bced7a6f850058be9c833f998ec1

tdf#142226 emfio: implement EMR_SMALLTEXTOUT

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2026-02-10 13:45:02 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/c0a0abdbb9b6e84ae3ebeb1f4a1e8287fd121d45

tdf#142226 emfio: implement EMR_SMALLTEXTOUT

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Bartosz 2026-02-11 17:42:32 UTC
I have verified with:
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: bdac0d67561fcbb55f4f73f8898ee8cac7a4a079
CPU threads: 12; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: pl-PL (pl_PL.UTF-8); UI: en-US
Calc: threaded

and it is working perfectly fine.
Thanks!