tdf#142226 emfio: implement EMR_SMALLTEXTOUT

Change-Id: Ib031c0d771045b80c99274974de8267e759e8557
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198903
Tested-by: Jenkins
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit aad62f783bd1bced7a6f850058be9c833f998ec1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198947
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>